[package]
name = "smoltcp-slip"
version = "0.1.0"
authors = ["Romain Déoux <romain.deoux@gmail.com>"]
edition = "2018"
description = "SLIP network interface on top of smoltcp"
readme = "README.md"
repository = "https://github.com/quarthex/smoltcp-slip"
license = "MIT"
keywords = ["slip", "smoltcp"]
categories = ["embedded", "network-programming"]

[dependencies]
embedded-hal = "0.2.5"
log = "0.4.14"
nb = "1.0.0"
serial-line-ip = "0.5.0"
smoltcp = "0.7.1"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
linux-embedded-hal = "0.3.0"
simple_logger = "1.11.0"
