[package]
name = "smoltcp-slip"
version = "0.2.0"
authors = ["Romain Déoux <romain.deoux@gmail.com>"]
edition = "2021"
description = "SLIP network interface on top of smoltcp"
readme = "README.md"
repository = "https://github.com/quarthex/smoltcp-slip"
license = "MIT"
keywords = ["slip", "smoltcp"]
categories = ["embedded", "network-programming", "no-std"]

[dependencies]
embedded-hal = "0.2.6"
log = "0.4.14"
nb = "1.0.0"
serial-line-ip = "0.5.0"
smoltcp = "0.8.0"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
linux-embedded-hal = "0.3.2"
simple_logger = { version = "1.16.0", default-features = false, features = ["colors"] }
