[package]
name = "smoltcp-slip"
version = "0.3.1"
authors = ["Romain Déoux <romain.deoux@gmail.com>"]
edition = "2021"
description = "SLIP network interface on top of smoltcp"
readme = "README.md"
repository = "https://github.com/quarthex/smoltcp-slip.git"
license = "MIT"
keywords = ["slip", "smoltcp"]
categories = ["embedded", "network-programming", "no-std"]

[dependencies]
embedded-hal = "0.2.7"
log = "0.4.20"
nb = "1.1.0"
serial-line-ip = "0.5.0"
smoltcp = "0.9.1"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
linux-embedded-hal = "0.3.2"
simple_logger = "4.2.0"
